--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
+URL: https://github.com/ryan-forrest/Math4753PROJ1
+BugReports: https://github.com/ryan-forrest/Math4753PROJ1/issues
